--- a/src/main/resources/templates/eventos/evento-adicionado.html
+++ b/src/main/resources/templates/eventos/evento-adicionado.html
@@ -2,18 +2,14 @@
 <html xmlns:th="http:/www.thymeLeaf.org">
 <head>
 <meta charset="UTF-8">
-<!-- Compiled and minified CSS -->
 <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
 <title>Eventos</title>
 </head>
 <body>
-
 	<div th:replace="~{menu :: menu}"></div>
 	<div class="container">
-		<h1>Bem vindo a nossa aplicação</h1>
-		<h2>Graças a Deus deu certo.</h2>
+	<h1>Evento adicionado com sucesso!</h1>
 	</div>
 </body>
 </html>
