--- a/src/main/resources/templates/eventos/detalhes.html
+++ b/src/main/resources/templates/eventos/detalhes.html
@@ -10,24 +10,83 @@
 	<div th:replace="~{menu :: menu}"></div>
 
 	<div class="container">
-	
-	
+
+
 		<h1>Detalhes do evento</h1>
+
 		<div class="row">
-    <div class="col s12">
-      <div class="card blue-grey darken-1">
-        <div class="card-content white-text">
-          <span class="card-title">Evento</span>
-			<p><strong>Id:</strong><span th:text="${evento.id}">1</span></p>
-			<p><strong>Nome:</strong><span th:text="${evento.nome}">Aniversário de José</span></p>
-			<p><strong>Local:</strong><span th:text="${evento.local}">Club</span></p>
-			<p><strong>Data:</strong><span th:text="${evento.data}">25/02/2021</span></p>
-			<p><strong>Horário:</strong><span th:text="${evento.horario}">20:00</span></p>
-        </div>
-      </div>
-    </div>
-  </div>
-		
+			<div class="col s12">
+				<div class="card">
+					<div class="card-content">
+						<span class="card-title">Evento</span>
+						<p>
+							<strong>Id:</strong><span th:text="${evento.id}">1</span>
+						</p>
+						<p>
+							<strong>Nome:</strong><span th:text="${evento.nome}">Aniversário
+								de José</span>
+						</p>
+						<p>
+							<strong>Local:</strong><span th:text="${evento.local}">Club</span>
+						</p>
+						<p>
+							<strong>Data:</strong><span th:text="${evento.data}">25/02/2021</span>
+						</p>
+						<p>
+							<strong>Horário:</strong><span th:text="${evento.horario}">20:00</span>
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col s12">
+				<div class="card">
+					<div class="card-content">
+						<span class="card-title">Adicionar Convidado:</span>
+						<form action="" method="post">
+							<div>
+								<label>Nome: </label> <input type="text" name="nome">
+							</div>
+							<div>
+								<label>RG: </label> <input type="text" name="rg">
+							</div>
+							<div>
+								<button type="submit" class="btn">Salvar</button>
+								<button type="reset" class="btn">Limpar</button>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col s12">
+				<div class="card">
+					<div class="card-content">
+						<span class="card-title">Convidados:</span>
+						<table class="highlight">
+							<thead>
+								<th>Id</th>
+								<th>Nome</th>
+								<th>RG</th>
+							</thead>
+							<tbody>
+								<tr th:each="c : ${convidados}">
+									<td th:text="${c.id}">1</td>
+									<td th:text="${c.nome}">Ricardo</td>
+									<td th:text="${c.rg}">157</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
 	</div>
 </body>
 </html>
