--- a/src/main/resources/templates/eventos/lista.html
+++ b/src/main/resources/templates/eventos/lista.html
@@ -10,9 +10,11 @@
 	<div th:replace="~{menu :: menu}"></div>
 
 	<div class="container">
+	
+	
 		<h1>Lista de eventos</h1>
 
-		<table>
+		<table class="highlight">
 
 			<thead>
 				<tr>
